solc_ossfuzz_seed_corpus/test_sol/test_1dd8f3ea7553f252bfbcc8e13cb9c481e537fc27bef0019d8863b1ce750ed4e2_01839bd5aadaa2a1c73dd6b55efdf66e98c0908a_sol.sol
==== Source:  ====

==== Source: su0.sol ====
struct St0 {
  function (uint16, bool) external   returns (int200, string memory) el0;
  bool el1;
  bool el2;
  bytes14 el3;
}
function f0(bool i0)     returns(bytes31 o0)
{
}
library L0 {
  modifier m0() 
  {
    function (function (bytes22, St0 memory) external   returns (uint16[] memory)[] memory, bytes24, int216[2] memory) internal   l0;
    _;
  }
  event ev0(int168  ep0, uint56[1] indexed ep1, bytes indexed ep2) anonymous;
  modifier m1() 
  {
    _;
  }
  enum EN0 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13, M14, M15,
    M16, M17, M18, M19, M20, M21, M22, M23,
    M24, M25, M26, M27, M28, M29, M30, M31,
    M32, M33
  }
  event ev1();
  function f1() public    returns(St0 memory o0)
  {
  }
  modifier m2() 
  {
    unchecked {
      L0.EN0 l0 = L0.EN0.M21;
      emit ev1();
      emit L0.ev1();
      assembly
      {
        {
        }
        for 
        {
        }
        0
        {
        }
        {
          l0 := 0
          break
        }
      }
    }
    string memory l1 = "d1214a0c798a2101c30f0e846cf05ed8511ee3445833a0";
    _;
  }
}
enum EN1 {
  M0, M1, M2, M3, M4, M5, M6, M7,
  M8, M9, M10, M11, M12, M13, M14, M15,
  M16, M17, M18, M19, M20, M21, M22, M23,
  M24, M25, M26, M27, M28, M29, M30, M31,
  M32, M33, M34, M35, M36, M37, M38, M39,
  M40, M41, M42, M43, M44, M45, M46, M47,
  M48, M49, M50, M51, M52, M53, M54, M55,
  M56, M57, M58, M59, M60, M61, M62, M63,
  M64, M65, M66, M67, M68, M69, M70, M71,
  M72, M73, M74, M75, M76, M77, M78, M79,
  M80, M81, M82, M83, M84, M85, M86, M87,
  M88, M89, M90, M91, M92, M93, M94, M95,
  M96, M97, M98, M99, M100, M101, M102, M103,
  M104, M105, M106, M107, M108, M109, M110, M111,
  M112, M113, M114, M115, M116, M117, M118
}
contract C0 {
  type T0 is bool;
  address public constant cons0 = 0x3D3C96Ad81080e33646857E6A82DF7bFe320D2bb;
  struct St1 {
    St0 el0;
    St0 el1;
    C0.T0 el2;
  }
  enum EN2 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13, M14, M15,
    M16, M17, M18, M19, M20, M21, M22, M23,
    M24, M25, M26, M27, M28, M29, M30, M31,
    M32, M33, M34, M35, M36
  }
  error er0(uint176 ep0);
  function f2(C0.T0 i0,bool i1) external virtual  payable
  {
    emit L0.ev1();
    if (true)
    {
      (bool l0, bytes memory l1) = address(this).call("d48ae3a3464e474386cf65dfc580bdae9983017e1a493e46139e89d2c299");
    }
  }
  bool immutable  s0 = true;
  address immutable public s1;
  bytes  public s2;
  constructor(address i0,bytes memory i1)   {
    s1 = address(this);
    s2 = "0000000000000000000000000000000000000000000000000000000000000000000000";
    unchecked {
      require(false, "ffffffff00000000000000000000000000");
    }
  }
  function f3(bool i0) public virtual   returns(C0.St1 memory o0,bytes memory o1)
  {
    try this.f2({i0: C0.T0.wrap(false), i1: (!(true))})
    {
    }
    catch
    {
      for(      false;
;
)
      {
      }
      (o0.el1) = ((o0.el0 = o0.el0));
    }
    assert(false);
  }
  modifier m3(address payable i0) virtual
  {
    _;
  }
  modifier m4() virtual
  {
    _;
    try this.f2({i0: C0.T0.wrap(false), i1: ((((uint160(598529217867049669234902190999826491098191962676) * uint160((uint160(0) / uint160(1461501637330902918203684832716283019655932542975)))) >> uint176(uint176(23120605187970065720699530537413615634287921068101420))) & uint160(0)) <= uint160(1461501637330902918203684832716283019655932542975))})
    {
      emit L0.ev1();
    }
    catch
    {
    }
    catch Panic(uint256 l0)
    {
    }
    "ffffffffffffffffffffffffffffffff0000000000000000";
    _;
    function (bool, uint136, C0.EN2) external   returns (bytes16) l1;
  }
  event ev2(St0  ep0, string  ep1) anonymous;
  modifier m5(L0.EN0 i0) 
  {
    false;
    _;
  }
  error er1(function (string memory, bytes6[] memory) external   returns (int208, bytes2, uint88) ep0);
}
pragma solidity >= 0.0.0;
error er2();
type T1 is bytes2;
// ----
// Warning 5667: (su0.sol:2168-2176): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:2177-2184): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2072: (su0.sol:2262-2269): Unused local variable.
// Warning 2072: (su0.sol:2271-2286): Unused local variable.
// Warning 5667: (su0.sol:2478-2488): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:2489-2504): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 6133: (su0.sol:2889-2894): Statement has no effect.
// Warning 5667: (su0.sol:2717-2724): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:2768-2783): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 6133: (su0.sol:3521-3571): Statement has no effect.
// Warning 6133: (su0.sol:3734-3739): Statement has no effect.
// CodeGenerationError 1284: Some immutables were read from but never assigned, possibly because of optimization.
